--- a/apollolake_user_config.json
+++ b/apollolake_user_config.json
@@ -3,9 +3,12 @@
         "pid": "0x0001",
         "vid": "0x46f4",
         "sn": "1440PDN000850",
-        "mac1": "001132EE9AA9"
+        "mac1": "001132EE9AA9",
+	      "netif_num": 2
     },
-    "synoinfo": {},
+    "synoinfo": {
+        "maxlanport": "2"
+    },
     "ramdisk_copy": {},
     "extensions": []
 }
