--- a/.github/workflows/DS918+.yml
+++ b/.github/workflows/DS918+.yml
@@ -30,8 +30,8 @@ jobs:
 
       - name: 配置引导镜像
         run: |
-          cp sample_user_config.json ${{matrix.platform}}_user_config.json
-          sed -i -e 's\1234XXX123\0123456789\g' -e 's\XXYYXXYYXXYY\00AAAAAAAAAA\g' -e 's/00AAAAAAAAAA"/&,\n\t"netif_num": 4/' -e 's/"synoinfo": {},/"synoinfo": {\n\t"maxlanport": "4"\n    },/' ${{matrix.platform}}_user_config.json
+          #cp sample_user_config.json ${{matrix.platform}}_user_config.json
+          #sed -i -e 's\1234XXX123\0123456789\g' -e 's\XXYYXXYYXXYY\00AAAAAAAAAA\g' -e 's/00AAAAAAAAAA"/&,\n\t"netif_num": 4/' -e 's/"synoinfo": {},/"synoinfo": {\n\t"maxlanport": "4"\n    },/' ${{matrix.platform}}_user_config.json
           cat ${{matrix.platform}}_user_config.json
           #./redpill_tool_chain.sh add https://raw.githubusercontent.com/pocopico/rp-ext/master/mpt3sas/rpext-index.json
           ./redpill_tool_chain.sh add https://github.com/jumkey/redpill-load/raw/develop/redpill-virtio/rpext-index.json
