--- a/apollolake_user_config.json
+++ b/apollolake_user_config.json
@@ -2,8 +2,8 @@
     "extra_cmdline": {
         "pid": "0x0001",
         "vid": "0x46f4",
-        "sn": "1440PDN000850",
-        "mac1": "001132EE9AA9",
+        "sn": "V15HKPKHVVMX3",
+        "mac1": "021132205525",
 	      "netif_num": 2
     },
     "synoinfo": {
