--- a/apollolake_user_config.json
+++ b/apollolake_user_config.json
@@ -1,7 +1,7 @@
 {
     "extra_cmdline": {
-        "pid": "0x0001",
-        "vid": "0x46f4",
+        "pid": "0x5583",
+        "vid": "0x0781",
         "sn": "V15HKPKHVVMX3",
         "mac1": "021132205525",
 	      "netif_num": 2
