--- a/apollolake_user_config.json
+++ b/apollolake_user_config.json
@@ -3,11 +3,12 @@
         "pid": "0x5583",
         "vid": "0x0781",
         "sn": "V15HKPKHVVMX3",
-        "mac1": "021132205525",
-	      "netif_num": 2
+        "mac1": "021132205525"
     },
     "synoinfo": {
-        "maxlanport": "2"
+      "DiskIdxMap": "0400",
+      "SataPortMap": "04",
+      "SasIdxMap": "0"
     },
     "ramdisk_copy": {},
     "extensions": []
